oncokb/oncokb-msk/ingress/ingress_oncokb_prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncokb-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
      - www.oncokb.aws.mskcc.org
      - beta-core.oncokb.aws.mskcc.org
      - core.oncokb.aws.mskcc.org
      - curation.oncokb.aws.mskcc.org
      - mm.oncokb.aws.mskcc.org
      - cbx.oncokb.aws.mskcc.org
      - grafana.oncokb.aws.mskcc.org
      secretName: wildcard-cert
  rules:
    - host: "www.oncokb.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core
                port:
                  number: 8888
    - host: "beta-core.oncokb.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core-beta
                port:
                  number: 8888
    - host: "core.oncokb.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core
                port:
                  number: 8888
    - host: "cbx.oncokb.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-cbx
                port:
                  number: 8888
    - host: "curation.oncokb.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-curation
                port:
                  number: 8888
    - host: "mm.oncokb.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-mm
                port:
                  number: 8888
    - host: "grafana.oncokb.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-grafana
                port:
                  number: 80
  ingressClassName: nginx
